tests/should_fail/for_destructure_3_on_2_tuple.nv
module fail
// For destructure: arity mismatch (3 patterns, 2 elements)
for (a, b, c) in [(1, 2), (3, 4)] {
    println(Cast::string(a))
}
